home hero no longer shows on mobile

--- a/_sass/_catch.scss
+++ b/_sass/_catch.scss
@@ -85,3 +85,20 @@
   }
 
 }
+
+@media screen and (min-width: 400px){
+
+
+}
+
+@media screen and (min-width: 700px){
+
+}
+
+@media screen and (min-width: 1024px){
+
+}
+
+@media screen and (min-width: 1440px){
+
+}
